# test

./: pyproject.toml  setup.cfg
src/: manage.py
src/dbdata/: asgi.py  settings.py  urls.py  wsgi.py
src/newvailodatabase.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/vailodb/: apps.py  models.py
src/vailodb/migrations/: 0001_initial.py  0002_subclient_alter_admin_permission_billing_currency_and_more.py  0003_rename_use_button_name_event_settings_contact_button_name_and_more.py  0004_remove_subuserpreference_campaign_and_more.py  0005_alter_admin_permission_client_service_type.py  0006_alter_subuserpreference_preference.py  0007_ticket_billing_details_transaction_amount.py  0008_alter_admin_permission_client_service_type.py  0009_alter_admin_permission_client_service_type.py  0010_admin_permission_client_marketplace.py  0011_subuserpreference_marketplace_id.py  0012_facebook_details_fb_whatsapp_business_account_id.py  0013_alter_admin_permission_client_service_type.py  0014_alter_admin_permission_client_service_type.py  0015_subuserpreference_history_preference.py  0016_facebook_details_private_key_and_more.py  0017_alter_subuserpreference_preference.py  0018_facebook_details_dynamic_file_name.py  0019_rename_dynamic_file_name_facebook_details_private_dynamic_file_name_and_more.py  (+5 more)
src/vailodb_a/: apps.py  models.py
src/vailodb_b/: apps.py  models.py
src/vailodb_f/: apps.py  models.py
src/vailodb_h/: apps.py  models.py
src/vailodb_m/: apps.py  models.py
src/vailodb_n/: apps.py  models.py
src/vailodb_s/: apps.py  models.py
(+161 files in other folders)
