[metadata]
name = newvailodatabase
version = 0.0.148
author = mohan
author_email = mohankumar95811@gmail.com
description = A small example package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent 

project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.7

[options.packages.find]
where = src
